--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                       <label class="custom-control-label" for="customCheck">Remember Me</label>
                     </div>
                   </div>
-                  <button class="btn btn-primary btn-user btn-block" onclick="currentToOther('login_page','wrapper')">Login</button>
+                  <button class="btn btn-primary btn-user btn-block" onclick="main()">Login</button>
                 </form>
                 <hr>
                 <div class="text-center">
@@ -156,7 +156,7 @@
       </li>
       <hr class="sidebar-divider">
       <li>
-        <button class="btn btn-danger btn-circle border-0" type="button" onclick="deleteFile()">
+        <button class="btn btn-danger btn-circle border-0" type="button" onclick="deleteFile()" title="DelFile">
           <i class="fa fa-trash"></i>
         </button>
         <hr class="sidebar-divider">
@@ -165,8 +165,8 @@
             <i class="fas fa-fw fa-wrench"></i>
             <span>All Transcript Files</span>
           </a>
-          <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar" style="">
-            <div class="bg-white py-2 collapse-inner rounded" id="allFile"></div>
+          <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar" >
+            <div class="bg-white py-2 collapse-inner rounded" id="allServerFile"></div>
           </div>
         </li>
       </li>
@@ -325,8 +325,8 @@
                 <div class="card shadow mb-4">
                   <div class="card-header py-3">
                     <h6 class="m-0 font-weight-bold text-primary">Word Cloud zone</h6>
-                  </div>
-                    <canvas id="wordtagimg" height="400"></canvas>
+                  </div >
+                    <img id="twinImg" />
                 </div>
 
               </div>
