--- a/index.html
+++ b/index.html
@@ -44,26 +44,7 @@
                 <div class="text-center">
                   <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                 </div>
-                <form class="user">
-                  <div class="form-group">
-                    <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address...">
-                  </div>
-                  <div class="form-group">
-                    <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Password">
-                  </div>
-                  <div class="form-group">
-                    <div class="custom-control custom-checkbox small">
-                      <input type="checkbox" class="custom-control-input" id="customCheck">
-                      <label class="custom-control-label" for="customCheck">Remember Me</label>
-                    </div>
-                  </div>
-                  <button class="btn btn-primary btn-user btn-block" onclick="main()">Login</button>
-                </form>
-                <hr>
-                <div class="text-center">
-                  <button class="btn btn-primary btn-user btn-block" onclick="currentToOther('login_page','register_page')">Register</button>
-                </div>
-                <hr>
+                  <button class="btn btn-primary btn-block" onclick="main()">Outil_Analyse_Sémantique</button>
               </div>
             </div>
           </div>
@@ -76,54 +57,6 @@
 
 </div>
 
-
-<!-- REGISTER PAGE-->
-
-  <div class="container" id="register_page" hidden=true>
-
-    <div class="card o-hidden border-0 shadow-lg my-5">
-      <div class="card-body p-0">
-        <!-- Nested Row within Card Body -->
-        <div class="row">
-          <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
-          <div class="col-lg-7">
-            <div class="p-5">
-              <div class="text-center">
-                <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
-              </div>
-              <form class="user">
-                <div class="form-group row">
-                  <div class="col-sm-6 mb-3 mb-sm-0">
-                    <input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="First Name">
-                  </div>
-                  <div class="col-sm-6">
-                    <input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Last Name">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <input type="email" class="form-control form-control-user" id="exampleInputEmail" placeholder="Email Address">
-                </div>
-                <div class="form-group row">
-                  <div class="col-sm-6 mb-3 mb-sm-0">
-                    <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Password">
-                  </div>
-                  <div class="col-sm-6">
-                    <input type="password" class="form-control form-control-user" id="exampleRepeatPassword" placeholder="Repeat Password">
-                  </div>
-                </div>
-                <button class="btn btn-primary btn-user btn-block" onclick="currentToOther('register_page','login_page')">Register Account</button>
-              </form>
-              <hr>
-              <div class="text-center">
-                <button class="btn btn-primary btn-user btn-block" onclick="currentToOther('register_page','login_page')">Already have an account? Login!</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div>
 
 <!-- MAIN PAGE-->
 
