--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                 <div class="text-center">
                   <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                 </div>
+                <div class="form-group">
+                  <input type="password" class="form-control form-control-user" id="tokenInput" placeholder="Token" required>
+                </div>
                   <button class="btn btn-primary btn-block" onclick="main()">Outil_Analyse_Sémantique</button>
               </div>
             </div>
